checking git working

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
   <header>
     <h1 class="fake-logo">Rust & Ore</h1>
+    <i class="fa fa-bars nav-toggle"></i>
     <nav>
-      <a href="#">Home</a>
+      <a href="#">Homee</a>
       <a href="#">Releases</a>
       <a href="#">News</a>
       <a href="#">Contact</a>
@@ -39,7 +40,7 @@
 
   <main class="layout">
 
-    <h1>h1 Heading</h1>
+    <h1>h1 Heading2</h1>
 
     <style>
       .brands {
