--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1 class="fake-logo">Rust & Ore</h1>
     <i class="fa fa-bars nav-toggle"></i>
     <nav>
-      <a href="#">Homee</a>
+      <a href="#">Homeeeee</a>
       <a href="#">Releases</a>
       <a href="#">News</a>
       <a href="#">Contact</a>
